# vortex-oct-fork

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.in  README.rst  pyproject.toml  requirements.txt  setup.py  vcpkg-configuration.json  vcpkg.json  vortex-config.cmake.in
.gitlab-ci/: Dockerfile  build-linux-docker.py  doc.ps1  make_jobs.py
cmake/: FindADQApi.cmake  FindATSGPU.cmake  FindATSSDK.cmake  FindNIDAQmx.cmake  FindNIIMAQ.cmake  deploy_dependencies.cmake  prepare_wheel.cmake  vcpkg_utils.cmake  vortex_version.cmake  windows_version.cmake  write_list.cmake
demo/: CMakeLists.txt  acquire_to_disk.py  cuda_benchmark.py  galvo_tuner.py  live_dynamic_view.py  live_view.py  live_view_alazar_fft.py  live_view_imaq.py  live_view_raster_aim.py  live_view_repeated.py  live_view_simple.py  requirements.txt  scan_external_channel.py  volume_to_disk.py
demo/_common/: engine.py
demo/engine/: CMakeLists.txt  main.cpp
demo/generate_scan/: CMakeLists.txt  main.cpp
demo/tutorial/: tutorial01.py  tutorial02.py  tutorial06.py
doc/: .gitignore  Doxyfile  api.rst  build.py  concepts.rst  conf.py  data-model.rst  demo.rst  getting-started.rst  how-to.rst  index.rst  module.rst  overview.rst  plot_directive.py  release.rst  requirements.txt  tikz_directive.py  troubleshoot.rst  tutorial.rst
doc/_static/: version-selector.css  version-selector.js
doc/api/: cpp.rst  py.rst
doc/demo/: acquire-to-disk.rst  live-view-alazar-fft.rst  live-view-dynamic.rst  live-view-raster-aim.rst  live-view-repeated.rst  live-view-simple.rst  live-view.rst
doc/develop/: build.rst  debug.rst  hardware.rst  profiler.rst
doc/how-to/: additional-scan-channels.rst  alazar-fpga.rst  ascan-windowing.rst  asynchronous-gpu.rst  bidirectional-repeated.rst  custom-scan.rst  interleave.rst  io-delay.rst
doc/module/: acquire.rst  engine.rst  log.rst  process.rst  scan.rst
doc/tutorial/: acquire.rst  display.rst  dynamic.rst  format.rst  process.rst  scan.rst  storage.rst
src/: CMakeLists.txt
src/vortex/: CMakeLists.txt  acquire.hpp  core.cpp  core.hpp  engine.hpp  format.hpp  io.hpp  marker.hpp  memory.hpp  process.hpp  scan.hpp  storage.hpp  version.hpp.in  vortex.hpp
src/vortex-python/: CMakeLists.txt  bindings.cpp  setup.py.in
src/vortex-python/bind/: acquire.cpp  acquire.hpp  common.hpp  core.cpp  engine.cpp  engine.hpp  exception.hpp  format.cpp  io.cpp  io.hpp  log.cpp  log.hpp  marker.cpp  marker.hpp  memory.cpp  memory.hpp  process.cpp  process.hpp  scan.cpp  scan.hpp  storage.cpp
src/vortex-python/doc/: docstring.hpp  docstring.py
src/vortex-python/module/: alazar.cpp  daqmx.cpp  helper.hpp  imaq.cpp  loader.cpp  loader.hpp  simple.cpp  teledyne.cpp
src/vortex/acquire/: dso.hpp  file.hpp  null.hpp
src/vortex/acquire/dso/: teledyne.hpp
src/vortex/acquire/dso/alazar/: base.hpp  config.hpp  cuda.hpp  fft.hpp  host.hpp
src/vortex/acquire/frame_grabber/: imaq.hpp
src/vortex/driver/: daqmx.cpp  daqmx.hpp  fftw.hpp  imaq.cpp  imaq.hpp  machdsp.cpp  machdsp.hpp  motion.cpp  motion.hpp  teledyne.cpp  teledyne.hpp
src/vortex/driver/alazar/: board.cpp  board.hpp  core.cpp  core.hpp  db.cpp  db.hpp
src/vortex/driver/cuda/: copy.hpp  fft.hpp  kernels.cuh  runtime.cpp  runtime.hpp  types.hpp
src/vortex/endpoint/: common.hpp  cpu.hpp  cuda.hpp  storage.hpp
src/vortex/engine/: adapter.hpp  clock.hpp  common.hpp  dispersion.hpp  engine.hpp  scan.hpp  source.hpp
src/vortex/engine/detail/: session.hpp
src/vortex/format/: broct.hpp  common.hpp  plan.hpp  position.cu  position.hpp  radial.cu  radial.hpp  spiral.cu  spiral.hpp  stack.hpp
src/vortex/io/: alazar.hpp  daqmx.hpp  machdsp.hpp  null.hpp
src/vortex/marker/: flags.hpp  marker.hpp
src/vortex/memory/: alazar.hpp  cpu.hpp  cuda.hpp  teledyne.hpp  tensor.hpp  view.hpp
src/vortex/process/: base.hpp  copy.hpp  cpu.hpp  cuda.cu  cuda.hpp  null.hpp
src/vortex/scan/: base.hpp  freeform.hpp  pattern.hpp  radial.hpp  raster.hpp  segmented.hpp  spiral.hpp  warp.hpp  waypoints.hpp
src/vortex/simple/: engine.hpp
src/vortex/storage/: broct.hpp  dump.hpp  hdf5.hpp  marker.hpp  simple.hpp
src/vortex/storage/detail/: header.hpp  raw.hpp
src/vortex/util/: cast.hpp  copy.cu  copy.hpp  exception.cpp  exception.hpp  platform.cpp  platform.hpp  ring.hpp  stream.hpp  sync.cpp  sync.hpp  thread.hpp  timing.hpp  tuple.hpp  variant.hpp
test/: requirements.txt
test/bind/: test_bind_acquire.py  test_bind_block.py  test_bind_core.py  test_bind_driver.py  test_bind_engine.py  test_bind_format.py  test_bind_scan.py  test_bind_storage.py
test/offline/: test_engine.py  test_file_acquisition.py  test_formatter.py  test_hdf5.py  test_memory.py  test_oct_processor.py  test_scan_queue.py  test_segmented_scan.py  test_simple_stack.py  test_warp.py  test_xy_scan.py  util.py
test/online/: conftest.py  test_alazar.py  test_alazar_io.py  test_imaq.py  test_machdsp_io.py  test_oct_processors.py  test_teledyne.py  test_teledyne_oct.py
